--- a/src/app/page/new/new.component.html
+++ b/src/app/page/new/new.component.html
@@ -3,151 +3,105 @@
 
 <form class="frmNew" [formGroup]="frmNew" (ngSubmit)="onSubmit()">
 	<mat-toolbar class="fadeIn" color="default">
-	  <mat-icon 
-	  	aria-hidden="false"
-	  	aria-label="My pages">post_add</mat-icon>
+		<mat-icon aria-hidden="false" aria-label="My pages">post_add</mat-icon>
 		<span>&nbsp;{{ 'CREATE_PAGE.TITLE' | translate }}</span>
 		<div class="menu-spacer"></div>
-		<div class="text-right page-title-buttons">	
-      <button 
-      	type="button"
-		  	mat-button
-		  	color="default"
-		  	(click)="goBack()"
-		  	[disabled]="loadingFrm">
-		    <mat-icon>navigate_before</mat-icon>
-		    {{ 'GENERAL.BUTTONS.GO_BACK' | translate }}
-		  </button>
-     
+		<div class="text-right page-title-buttons">
+			<button type="button" mat-button color="default" (click)="goBack()" [disabled]="loadingFrm">
+				<mat-icon>navigate_before</mat-icon>
+				{{ 'GENERAL.BUTTONS.GO_BACK' | translate }}
+			</button>
+
 		</div>
 	</mat-toolbar>
 	<div class="container page-container fadeIn" *ngIf="!newPageTX">
-			<div class="row">
-				<div class="col-12 col-md-6">
-					<mat-form-field class="w100" appearance="outline" color="accent">
-					  <mat-label>{{ 'CREATE_PAGE.FRM_TITLE' | translate }}</mat-label>
-					  <input
-					  	formControlName="title"
-					  	matInput
-					  	(change)="updateSlug(title!.value)"
-					  	autocomplete="off"
-					  	maxlength="150">
-		    		<mat-hint align="end">{{title!.value.length}} / 150</mat-hint>
-					</mat-form-field>
-					<div class="author-address">
-						<strong>{{ 'CREATE_PAGE.FRM_BY' | translate }}</strong> {{ authorAddress }}
-					</div>
-					<mat-form-field class="w100" appearance="outline" color="accent">
-					  <mat-label>{{ 'CREATE_PAGE.FRM_SLUG' | translate }}</mat-label>
-					  <input
-					  	formControlName="slug"
-					  	matInput
-					  	(change)="verifySlug(slug!.value)"
-					  	autocomplete="off"
-					  	maxlength="150">
-		    		<mat-hint align="end">{{slug!.value.length}} / 150</mat-hint>
-					</mat-form-field>
-					<div class="w100" appearance="outline">
-					  <p>Page value in $WIKI tokens</p>
-					  <mat-slider 
-					  	class="w100" 
-					  	min="1" 
-					  	max="1000" 
-  					[displayWith]="formatLabel"
-					  	thumbLabel
-					  	tickInterval="1"
-					  	step="1"
-					  	color="accent">
-				  		<input matSliderThumb formControlName="pageValue" >
-				  	</mat-slider>
-					  <div class="mat-hint small-hint text-right">{{pageValue!.value}} $WIKI tokens</div>
-					</div>
-					
-					<mat-form-field class="w50" appearance="outline" color="accent">
-						<mat-label *ngIf="!categoryList || !categoryList.length">{{ 'CREATE_PAGE.FRM_LOADING' | translate }}</mat-label>
-					  <mat-label *ngIf="categoryList && categoryList.length">{{ 'CREATE_PAGE.FRM_CATEGORY' | translate }}</mat-label>
-					  <mat-select 
-					  	formControlName="category">
-					    <mat-option *ngFor="let cat of categoryList" [value]="cat.slug">
-					      {{ cat.label }}
-					    </mat-option>
-					  </mat-select>
-					</mat-form-field>
-					<mat-form-field class="w50" style="padding-left: 20px;" appearance="outline" color="accent">
-						<mat-label *ngIf="!languageList || !languageList.length">{{ 'CREATE_PAGE.FRM_LOADING' | translate }}</mat-label>
-					  <mat-label *ngIf="languageList && languageList.length">{{ 'CREATE_PAGE.FRM_LANGUAGE' | translate }}</mat-label>
-					  <mat-select 
-					  	(selectionChange)="clearSlug()"
-					  	formControlName="language">
-					    <mat-option 
-					    	*ngFor="let lang of languageList" 
-					    	[value]="lang.code">
-					      {{ lang.native_name }}
-					    </mat-option>
-					  </mat-select>
-					</mat-form-field>
+		<div class="row">
+			<div class="col-12 col-md-6">
+				<mat-form-field class="w100" appearance="outline" color="accent">
+					<mat-label>{{ 'CREATE_PAGE.FRM_TITLE' | translate }}</mat-label>
+					<input formControlName="title" matInput (change)="updateSlug(title!.value)" autocomplete="off"
+						maxlength="150">
+					<mat-hint align="end">{{title!.value.length}} / 150</mat-hint>
+				</mat-form-field>
+				<div class="author-address">
+					<strong>{{ 'CREATE_PAGE.FRM_BY' | translate }}</strong> {{ authorAddress }}
+				</div>
+				<mat-form-field class="w100" appearance="outline" color="accent">
+					<mat-label>{{ 'CREATE_PAGE.FRM_SLUG' | translate }}</mat-label>
+					<input formControlName="slug" matInput (change)="verifySlug(slug!.value)" autocomplete="off" maxlength="150">
+					<mat-hint align="end">{{slug!.value.length}} / 150</mat-hint>
+				</mat-form-field>
+				<div class="w100" appearance="outline">
+					<p>Page value in $WIKI tokens</p>
+					<mat-slider class="w100" min="1" max="1000" [displayWith]="formatLabel" thumbLabel tickInterval="1" step="1"
+						color="accent">
+						<input matSliderThumb formControlName="pageValue">
+					</mat-slider>
+					<div class="mat-hint small-hint text-right">{{pageValue!.value}} $WIKI tokens</div>
 				</div>
 
-				<div class="col-12 col-md-6">
-					<mat-card class="card-img">
-						<ngx-skeleton-loader 
-					  	count="1" 
-					  	[animation]="getSkeletonLoaderAnimationType()"
-					  	[theme]="getSkeletonLoaderThemeNgStyle()"
-					  	*ngIf="!previewImgUrl"
-					  	></ngx-skeleton-loader>
-					  <img
-					  	*ngIf="previewImgUrl"
-					  	[src]="previewImgUrl"
-					  	class="card-preview-img"
-					  	>
+				<mat-form-field class="w50" appearance="outline" color="accent">
+					<mat-label *ngIf="!categoryList || !categoryList.length">{{ 'CREATE_PAGE.FRM_LOADING' | translate
+						}}</mat-label>
+					<mat-label *ngIf="categoryList && categoryList.length">{{ 'CREATE_PAGE.FRM_CATEGORY' | translate
+						}}</mat-label>
+					<mat-select formControlName="category">
+						<mat-option *ngFor="let cat of categoryList" [value]="cat.slug">
+							{{ cat.label }}
+						</mat-option>
+					</mat-select>
+				</mat-form-field>
+				<mat-form-field class="w50" style="padding-left: 20px;" appearance="outline" color="accent">
+					<mat-label *ngIf="!languageList || !languageList.length">{{ 'CREATE_PAGE.FRM_LOADING' | translate
+						}}</mat-label>
+					<mat-label *ngIf="languageList && languageList.length">{{ 'CREATE_PAGE.FRM_LANGUAGE' | translate
+						}}</mat-label>
+					<mat-select (selectionChange)="clearSlug()" formControlName="language">
+						<mat-option *ngFor="let lang of languageList" [value]="lang.code">
+							{{ lang.native_name }}
+						</mat-option>
+					</mat-select>
+				</mat-form-field>
+			</div>
 
-					</mat-card>
-					<div class="text-right img-action-panel">
-						<button 
-							class="btn-upload-file"
-				    	mat-flat-button
-				    	[disabled]="loadingFrm"
-				    	type="button"
-				    	(click)="fileManager('image')"
-				    	color="primary">
-				    	<mat-icon>perm_media</mat-icon>
-				    	File manager
-				    </button>
-				    <button 
-							class="btn-upload-file"
-				    	mat-flat-button
-				    	[disabled]="loadingFrm"
-				    	type="button"
-				    	(click)="uploadFile('image')"
-				    	color="primary">
-				    	<mat-icon>upload</mat-icon>
-				    	{{ 'CREATE_PAGE.FRM_UPLOAD_FILE' | translate }}
-				    </button>
-					</div>
+			<div class="col-12 col-md-6">
+				<mat-card class="card-img">
+					<ngx-skeleton-loader count="1" [animation]="getSkeletonLoaderAnimationType()"
+						[theme]="getSkeletonLoaderThemeNgStyle()" *ngIf="!previewImgUrl"></ngx-skeleton-loader>
+					<img *ngIf="previewImgUrl" [src]="previewImgUrl" class="card-preview-img">
+
+				</mat-card>
+				<div class="text-right img-action-panel">
+					<button class="btn-upload-file" mat-flat-button [disabled]="loadingFrm" type="button"
+						(click)="fileManager('image')" color="primary">
+						<mat-icon>perm_media</mat-icon>
+						File manager
+					</button>
+					<button class="btn-upload-file" mat-flat-button [disabled]="loadingFrm" type="button"
+						(click)="uploadFile('image')" color="primary">
+						<mat-icon>upload</mat-icon>
+						{{ 'CREATE_PAGE.FRM_UPLOAD_FILE' | translate }}
+					</button>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-12">
-					<h3>{{ 'CREATE_PAGE.FRM_CONTENT' | translate }}</h3>
-					<textarea id="create-page-textarea-simplemde-content" #frmTextareaEditor></textarea>
-				</div>
-				<section class="col-12 small-hint">
-		      <mat-checkbox formControlName="useDispatch">*Create page for FREE (Dispatch method)</mat-checkbox>
-		    </section >
-				<div class="col-12 text-center">
-					<button 
-						class="btn-save-2"
-			    	mat-flat-button
-			    	type="submit"
-			    	[disabled]="!frmNew.valid ||  loadingFrm"
-			    	color="accent">
-			    	<mat-icon>save</mat-icon>
-			    	{{ 'CREATE_PAGE.FRM_BTN_SAVE' | translate }}
-			    </button>
-				</div>
-				
+		</div>
+		<div class="row">
+			<div class="col-12">
+				<h3>{{ 'CREATE_PAGE.FRM_CONTENT' | translate }}</h3>
+				<textarea id="create-page-textarea-simplemde-content" #frmTextareaEditor></textarea>
 			</div>
+			<section class="col-12 small-hint">
+				<mat-checkbox formControlName="useDispatch">*Create page for FREE (Dispatch method)</mat-checkbox>
+			</section>
+			<div class="col-12 text-center">
+				<button class="btn-save-2" mat-flat-button type="submit" [disabled]="!frmNew.valid ||  loadingFrm"
+					color="accent">
+					<mat-icon>save</mat-icon>
+					{{ 'CREATE_PAGE.FRM_BTN_SAVE' | translate }}
+				</button>
+			</div>
+
+		</div>
 	</div>
 
 </form>
@@ -156,10 +110,11 @@
 		Congratulations! 🥳
 	</h1>
 	<h2 class="text-center">
-		You have successfully created a new arwiki page. Now your page will live forever in the permaweb. 
+		You have successfully created a new arwiki page. Now your page will live forever in the permaweb.
 	</h2>
 	<h3 class="text-center">
-		But wait! Remember that your tx needs to be mined and confirmed by the Arweave network. This process takes around 10 minutes. If your transaction is not processed please check first that you have enough AR balance.
+		But wait! Remember that your tx needs to be mined and confirmed by the Arweave network. This process takes around 10
+		minutes. If your transaction is not processed please check first that you have enough AR balance.
 	</h3>
 	<h3 class="text-center">
 		Once your transaction has been confirmed, your page will be reviewed and approved by a human ArWiki Moderator.
@@ -168,6 +123,7 @@
 		Redirecting to your dashboard in 20 seconds ...
 	</h4>
 	<p class="text-center">
-		You can track your transaction status here: <a mat-button href="https://viewblock.io/arweave/tx/{{newPageTX}}" class="text-center" target="_blank">{{newPageTX}}</a>
+		You can track your transaction status here: <a mat-button href="https://viewblock.io/arweave/tx/{{newPageTX}}"
+			class="text-center" target="_blank">{{newPageTX}}</a>
 	</p>
 </div>
